fix: ssl api
